--- a/app/src/main/res/layout/profile_add_dialog.xml
+++ b/app/src/main/res/layout/profile_add_dialog.xml
@@ -3,50 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/shape_round_popup">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintL"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:orientation="vertical">
+    <ImageButton
+        android:id="@+id/addUserImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_for_circle_button"
+        />
+
+    <EditText
+        android:id="@+id/addUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
-
-
-        <ImageButton
-            android:id="@+id/addUserImage"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/addUserName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <EditText
-        android:id="@+id/addUserName"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:gravity="center"
+        android:textColor="@color/black"
         android:hint="이름을 입력해주세요"
-        app:layout_constraintBottom_toTopOf="@+id/addUserPhone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/addUserPhone"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:gravity="center"
+        android:layout_gravity="center"
         android:hint="연락처를 입력해주세요"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/dark_gray"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="164dp" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
